--- a/src/css/frontend.css
+++ b/src/css/frontend.css
@@ -9785,7 +9785,8 @@ tbody.collapse.in {
 /* line 448, ../../source/scss/includes/bootstrap/_navbar.scss */
 .navbar-default .navbar-toggle {
   border-color: #fff;
-  background-color: #fff;
+  background-color: transparent;
+  /*background-color: #fff;*/
 }
 /* line 452, ../../source/scss/includes/bootstrap/_navbar.scss */
 .navbar-default .navbar-toggle .icon-bar {
